# EtltAirbyteMinioClickhouseDbtAirflow

./: .env.example  .gitignore  Dockerfile  Dockerfile_fastapi  README.md  constraints.txt  default-profile.xml  docker-compose-minio-clickhouse.yml  docker-compose.yml  inspect_airbyte.txt  inspect_airflow.txt  inspect_airflow_w.txt  makefile  pyproject.toml
airbyte/: custom_api_builder.yaml  france_departments.json  france_departments_chunks.json  job_sync_id.json  weather_connections.json
airflow_auth_config/: config_info.txt  simple_auth_passwords.json
assets/draw/: flowchart_base.excalidraw
dags/: airbyte_eltl_dag.py  create_table_into_clickhouse.py  dbt_models_dag.py  eltl_airbyte_dag.py  extract_airbyte_sync_to_minio_dag.py  extract_http_sync_to_minio_dag.py  load_data_from_datalake_to_clickhouse.py  load_data_from_datalake_to_clickhouse_dag.py  load_data_from_minio_to_clickhouse.py  load_data_to_gcs_gcs-bq_dag.py  load_most_recent_data_to_bigquery.py  load_old_data_to_gcs_dag.py  load_old_data_to_gcs_gcs-bq_dag.py  load_pgdb_to_bq_dags.py  ml_ts_dag.py  transform_datalake_optimization_dag.py  transform_dbt_models_bigquery_dag.py  transform_dbt_models_clickhouse_dag.py  transform_dbt_models_dag.py  transform_dbt_models_old_data_bigquery_dag.py  transform_dbt_old_data_bigquery_dag.py  transform_old_data_dag.py  transform_python_new_data_into_gcs_dag.py  transform_python_old_data_dag.py  trigger_dagrun_dag.py  upload_old_data_dag.py  upload_old_data_to_gcs.py
data/location/: france_region_department96.parquet  regdep_france.parquet
data/old_data/: france_data_20240925-104049.csv  france_data_20240926-122406.csv  france_data_20240928-094345.csv  france_data_20240929-110338.csv  france_data_20240930-071033.csv  france_data_20241001-064152.csv  france_data_20241002-093510.csv  france_data_20241003-065602.csv  france_data_20241004-081642.csv  (+63 more)
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
project_functions/: query.sql
scripts/: airbyte_connect_to_containers_network.sh  airbyte_deploy.sh  airbyte_weather_team_connection_id.sh  connect_airbyte_to_containers_network.sh  docker_external_networks.sh  docker_external_volumes.sh  entrypoint.sh  init_connections.sh
tests/: test_python_functions.py  test_tasks_config.py  test_trigger_dagrun_dag_config.py
weather_api/: crud.py  database.py  main.py  models.py  schemas.py
(+101 files in other folders)
