[tool.poetry]
name = "airbyte-deployment"
version = "0.1.0"
description = ""
authors = ["donatien konan <donatien.konan.pro@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
pendulum = "*"
pytest = "*"
apache-airflow = {version = "^2.4.0", extras = ["postgres", "airbyte"]}
ipython = "*"
dbt-core = "*"
dbt-bigquery = "*"
pyarrow = "*"
sqlalchemy-bigquery = "^1.2.1"
apache-airflow-providers-google = "*"
pandas = "1.5.3"
google-cloud-bigquery = "3.27.0"
missingno = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
